--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@ code {
 table, tbody, th, td {
   border: 1px solid black;
 }
+
+#map {
+  height: calc(100vh - 400px);
+  width: calc(100vw - 400px);
+}
